make the h1 element in the navlink clickable

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Plan-et Continently</title><!-- Renaming the title as it has a better appeal to it -->
+  <title href="/">Plan-et Continently</title><!-- Renaming the title as it has a better appeal to it -->
 </head>
 
 <body>
